# BKbot

./: .env.example  .gitignore  Dockerfile  PROJECT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 001_initial.py
src/statbet_bot/: __init__.py  bot.py  config.py  constants.py  database.py  middleware.py  models.py
src/statbet_bot/handlers/: __init__.py  analyze.py  calc_hedge.py  cross_hedge.py  matches.py  other.py  polymarket.py  start.py
src/statbet_bot/services/: __init__.py  hedge.py  polymarket.py  prediction.py
src/statbet_bot/utils/: __init__.py  formatters.py  validators.py
tests/: test_database.py  test_models.py  test_polymarket.py
