[tool.poetry]
name = "statbet-bot"
version = "0.1.0"
description = "Telegram bot for sports analytics and paper trading"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.17.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
shap = "^0.46.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
asyncpg = "^0.30.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.0.0"
httpx = {version = "^0.27.0", extras = ["http2"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
flake8 = "^7.0.0"
alembic = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
